ui/dashboard/widgets/widget-wrapper.reel/_widget-wrapper.css
.WidgetWrapper {
    position: relative;
    width: 100%;

    @nest .Main.drawer-is-open & {
        cursor: grab;
    }

    @nest .Sideboard & {
        margin-left:    0;
        margin-right:   0;
        margin-top:     0;
        width: 100%;
        max-width: 100%;
    }

    &.isDragging {
        opacity: .75;
    }

    &.Widget--small {
        @media (min-width: 65em) {
            width: calc(50% - 1em);
            max-width: 100%;
        }

        @media (min-width: 90em) {
            width: calc(33.333% - 1em);
            max-width: calc(50% - 1em);
        }
    }

    &.Widget--medium {
        @media (min-width: 65em) {
            width: calc(100% - 1em);
        }

        @media (min-width: 90em) {
            width: calc(66.666% - 1em);
            max-width: calc(100% - 1em);
        }
    }

    @nest .Sideboard & {
        width: 100%;
    }
}

.WidgetWrapper-removeButton {
    right: -.5rem;
    top: -.5rem;
    position: absolute;
    width:  2rem;
    height: 2rem;
    background: #E0003A;
    border-radius: 50%;
    padding: .5rem;
    color: #fff;
    box-shadow: 0 2px 2px 1px rgba(0,0,0,.3);
    visibility: hidden;
    transform: scale(0);
    transition: transform .25s ease-in-out, visibility .25s ease-in-out;

    &:hover {
        background: color(#E0003A lightness(40%));
    }

    @nest .Main.drawer-is-open & {
        visibility: visible;
        transform: scale(1);
    }
}

/* Widget Size Selector */

.Widget-sizeSelector {
    position: absolute;
    display: none;
    bottom: .5rem;
    left: .5rem;
    font-size: .75em;
    box-shadow: 0 0 4px 0px rgba(0,0,0,1);
    z-index: 1;

    @nest .Main.drawer-is-open .Dashboard & {
        display: block;
    }

}

